Added work experience. education and language skills

--- a/index.html
+++ b/index.html
@@ -15,3 +15,31 @@
       Email: <a href="mailto:batuhan.sungur@gmail.com">batuhan.sungur@gmail.com</a><br />
       Phone: (+373) 67463840
     </p>
+
+    <h2>Work Experience</h2>
+    <h3>Software Developer - Efes Moldova Vitanta</h3>
+    <p><strong>Duration:</strong> 23/10/2023 – 30/09/2024</p>
+    <p><strong>Location:</strong> Chisinau, Moldova</p>
+    <ul>
+      <li>Designed and implemented RPA solutions using UiPath REFramework.</li>
+      <li>Automated processes for HR and Accounting departments, improving efficiency.</li>
+      <li>Managed IT solutions, including OptiSigns remote screen management software.</li>
+      <li>Created a "How to Use OptiSigns" handbook for internal users.</li>
+    </ul>
+
+    <h2>Education</h2>
+    <h3>Bachelor of Science | Software Engineering</h3>
+    <p><strong>Institution:</strong> Technical University of Moldova</p>
+    <p><strong>Address:</strong> 168, Ștefan cel Mare AV., 9/7 Studenților st., Moldova</p>
+    <p><strong>Field of Study:</strong> Engineering, Manufacturing, and Construction</p>
+    <p><strong>Website:</strong> <a href="http://www.fcim.utm.md">www.fcim.utm.md</a></p>
+
+    <h3>Graduate - Mehmet Zakir Ekni Anadolu Highschool</h3>
+    <p><strong>Location:</strong> Ankara, Türkiye</p>
+    <p><strong>Website:</strong> <a href="https://mze.meb.k12.tr/">mze.meb.k12.tr</a></p>
+
+    <h2>Language Skills</h2>
+    <ul>
+      <li><strong>Mother Tongue:</strong> Turkish</li>
+      <li><strong>English:</strong> C1 (Listening, Reading, Writing, Spoken Production, Spoken Interaction)</li>
+    </ul>
